fixed layout spacing issue near the top to prevent navbar overlap

--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,9 @@
   font-family: 'powertxt';
   src: url('fonts/PowerRangers.ttf');
 }
-
+nav {
+  margin-bottom: 40px;
+}
 .headshot {
   padding: 10px 40px;
   border-radius: 50%;
